fix sql
