# src/internal/api/restapi/operations/list_product.go
@@ -12,16 +12,16 @@ import (
 )
 
 // ListProductHandlerFunc turns a function with the right signature into a list product handler
-type ListProductHandlerFunc func(ListProductParams, *int) ListProductResponder
+type ListProductHandlerFunc func(ListProductParams) ListProductResponder
 
 // Handle executing the request and returning a response
-func (fn ListProductHandlerFunc) Handle(params ListProductParams, principal *int) ListProductResponder {
-	return fn(params, principal)
+func (fn ListProductHandlerFunc) Handle(params ListProductParams) ListProductResponder {
+	return fn(params)
 }
 
 // ListProductHandler interface for that can handle valid list product params
 type ListProductHandler interface {
-	Handle(ListProductParams, *int) ListProductResponder
+	Handle(ListProductParams) ListProductResponder
 }
 
 // NewListProduct creates a new http.Handler for the list product operation
@@ -46,25 +46,12 @@ func (o *ListProduct) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
 	}
 	var Params = NewListProductParams()
 
-	uprinc, aCtx, err := o.Context.Authorize(r, route)
-	if err != nil {
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-	if aCtx != nil {
-		r = aCtx
-	}
-	var principal *int
-	if uprinc != nil {
-		principal = uprinc.(*int) // this is really a int, I promise
-	}
-
 	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
 		o.Context.Respond(rw, r, route.Produces, route, err)
 		return
 	}
 
-	res := o.Handler.Handle(Params, principal) // actually handle the request
+	res := o.Handler.Handle(Params) // actually handle the request
 
 	o.Context.Respond(rw, r, route.Produces, route, res)
 
