# src/internal/api/swagger.yml
@@ -12,7 +12,7 @@ info:
   title: Service-storage
   description: Service storage brands and cosmetics.
 
-basePath: /api/storage
+basePath: /api
 
 schemes:
   - http
@@ -93,6 +93,7 @@ paths:
 
   /products:
     get:
+      security: []
       operationId: listProduct
       parameters:
         - name: query
@@ -143,6 +144,7 @@ paths:
 
   /product/{productID}:
     get:
+      security: []
       operationId: product
       parameters:
         - in: path
@@ -285,6 +287,20 @@ definitions:
   ID:
     type: integer
     description: Object ID.
+
+  Pagination:
+    type: object
+    required:
+      - limit
+      - offset
+    properties:
+      limit:
+        type: integer
+        minimum: 1
+        maximum: 500
+      offset:
+        type: integer
+        minimum: 0
 
   Error:
     type: object
